refactor(service): enhance MarketingCampaignService by introducing logging, constants for magic numbers, and streamlining query methods for improved readability and performance